--- a/contact.css
+++ b/contact.css
@@ -174,3 +174,22 @@ body {
     cursor: pointer;
     padding: 10px;
 }
+
+
+@media (max-width: 991px){
+    .contact {
+        padding: 50px;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .container .contactInfo{
+        margin-bottom: 40px;
+    }
+    .container .contactInfo, .contactForm{
+        width: 100%;
+    }
+    body {
+        background-color: black;
+    }
+}
